adjusted the marketing content section so that the benefit section gets fixed and its aligned with the marketing content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,15 @@ body {
     background-color: #d9dcd6;
 }
 
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
 /* Header*/
 
 header {
@@ -45,14 +54,7 @@ header nav ul li {
     margin-left: 25px;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
 
-p {
-    font-size: 16px;
-}
 
 /* hero/jumbotron */
 
@@ -77,7 +79,7 @@ p {
     margin-left: 25px;
 }
 
-.marketing-content {
+.content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -130,7 +132,6 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
 
 
 /* footer */
